syntax = "proto3";

package com.example.grpc;

option java_multiple_files = true;

service MessageService {
    rpc sendMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
    string message = 1;
}

message MessageResponse {
    string response = 1;
}
